# HRL

./: .clang-tidy  CMakeLists.txt  README.md
.conan/: conanfile.py
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
